# narchiver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-build.yml  narchiver-build.yml  narchiver-lint.yml
Zipper/: File.cpp  File.h  Folder.cpp  Folder.h  Zipper.cpp  Zipper.sln  Zipper.vcxproj  Zipper.vcxproj.filters
Zipper/Debug/: Zipper.exe.recipe  Zipper.ilk  Zipper.vcxproj.FileListAbsolute.txt  vc142.idb  zipper.obj.enc
Zipper/Debug/Zipper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Zipper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Zipper/Release/Zipper.tlog/: CL.command.1.tlog  CL.write.1.tlog  Zipper.lastbuildstate
Zipper/x64/Release/Zipper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Zipper.lastbuildstate
cmake/: CompilationFlags.cmake  CompileFlags.cmake  FetchDependencies.cmake
docs/: CONTRIBUTING.md  LICENSE
include/: Archiver.h  Dearchiver.h  File.h  Folder.h
sample/: test_file.txt
sample/folder1/: file1.txt
sample/folder1/folder2/: file3.txt
sample/folder10/: file60.txt
sample_output/: file.nar
src/: Archiver.cpp  CMakeLists.txt  Dearchiver.cpp  File.cpp  Folder.cpp
src/archiver/: Archiver.cpp  Archiver.h  CMakeLists.txt
src/commandParser/: CMakeLists.txt  CommandParser.cpp  CommandParser.h
src/common/: CMakeLists.txt
src/common/file/: CMakeLists.txt  File.cpp  File.h
src/common/folder/: CMakeLists.txt  Folder.cpp  Folder.h
src/dearchiver/: CMakeLists.txt  Dearchiver.cpp  Dearchiver.h
src/file/: CMakeLists.txt  File.cpp  File.h
src/folder/: CMakeLists.txt  Folder.cpp  Folder.h
tests/unit/: CMakeLists.txt
tests/unit/commandParser/: CMakeLists.txt  ut_CommandParser.cpp
tests/unit/file/: CMakeLists.txt  ut_File.cpp
tests/unit/folder/: CMakeLists.txt  ut_Folder.cpp
